# django-rest-cookbook

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
core/categories/: models.py
core/categories/migrations/: 0001_initial.py  0002_category_constraints.py
core/core/: asgi.py  settings.py  urls.py
core/products/: async_views.py  models.py  serializers.py  tasks.py  urls.py  views.py
core/products/migrations/: 0001_initial.py  0002_product_category.py  0003_product_metadata.py  0004_product_is_featured.py
